--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -10,6 +10,7 @@ on:
 # Variables available to all jobs
 env:
   IMAGE_REPO: ${{ vars.DOCKERHUB_REPO }}
+  GITHUB_CONTAINER_REGISTRY: ghcr.io/${{ github.repository_owner }}
   RUN_NUMBER: ${{ github.run_number }}
   RUN_NUMBER_OFFSET: ${{ vars.RUN_NUMBER_OFFSET }}
 
@@ -49,6 +50,14 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
+      # Authenticate GHCR to allow pushing to our alternate image registry
+      - name: Login to Github Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       # Checkout our Github repo
       - name: Checkout Github Repo
         uses: actions/checkout@v2
@@ -82,10 +91,11 @@ jobs:
       # Push Docker Images to Dockerhub
       - name: Push Image to Dockerhub
         run: |
-          docker push ${IMAGE_REPO}/${IMAGE_NAME}:${VERSION}
           if [[ $GITHUB_REF == 'refs/heads/master' ]]; then \
           docker tag ${IMAGE_REPO}/${IMAGE_NAME}:${VERSION} ${IMAGE_REPO}/${IMAGE_NAME}:testing && \
           docker push ${IMAGE_REPO}/${IMAGE_NAME}:testing; \
+          docker tag ${IMAGE_REPO}/${IMAGE_NAME}:${VERSION} ${GITHUB_CONTAINER_REGISTRY}/${IMAGE_NAME}:testing && \
+          docker push ${GITHUB_CONTAINER_REGISTRY}/${IMAGE_NAME}:testing; \
           fi
         env:
           VERSION: '${{ steps.config-version.outputs.VERSION }}-${{ steps.offset.outputs.BUILD_NUMBER }}'
